--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bf-angular",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "scripts": {
     "ng": "ng",
     "start": "ng serve  --open",
@@ -14,18 +14,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
+    "@angular/animations": "15.0.0",
+    "@angular/cdk": "15.0.0",
+    "@angular/common": "15.0.0",
+    "@angular/compiler": "15.0.0",
+    "@angular/core": "15.0.0",
     "@angular/fire": "^7.5.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/material": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/forms": "15.0.0",
+    "@angular/material": "15.0.0",
+    "@angular/platform-browser": "15.0.0",
+    "@angular/platform-browser-dynamic": "15.0.0",
+    "@angular/router": "15.0.0",
     "firebase": "^9.9.3",
-    "lottie-web": "^5.10.0",
+    "lottie-web": "^5.11.0",
     "ngx-lottie": "^10.0.0",
     "passive-events-support": "^1.0.33",
     "rxjs": "~7.5.0",
@@ -33,7 +34,7 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.1",
+    "@angular-devkit/build-angular": "15.0.1",
     "@angular/cli": "~15.0.1",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
