--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bf-angular",
-  "version": "2.0.11",
+  "version": "2.0.12",
   "scripts": {
     "ng": "ng",
     "start": "ng serve  --open",
@@ -25,9 +25,9 @@
     "@angular/platform-browser": "15.0.0",
     "@angular/platform-browser-dynamic": "15.0.0",
     "@angular/router": "15.0.0",
+    "@lottiefiles/lottie-player": "^1.7.1",
     "firebase": "^9.9.3",
-    "lottie-web": "^5.11.0",
-    "ngx-lottie": "^10.0.0",
+    "lottie-player": "^1.0.0",
     "passive-events-support": "^1.0.33",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
