--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bf-angular",
-  "version": "2.0.16",
+  "version": "2.0.17",
   "scripts": {
     "ng": "ng",
     "start": "ng serve  --open",
@@ -17,7 +17,7 @@
     "@angular/animations": "15.0.0",
     "@angular/cdk": "15.0.0",
     "@angular/common": "15.0.0",
-    "@angular/compiler": "15.0.0",
+    "@angular/compiler": "15.0.",
     "@angular/core": "15.0.0",
     "@angular/fire": "^7.5.0",
     "@angular/forms": "15.0.0",
@@ -32,13 +32,15 @@
     "passive-events-support": "^1.0.33",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.0.1",
     "@angular/cli": "~15.0.1",
-    "@angular/compiler-cli": "^15.0.0",
+    "@angular/compiler-cli": "15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^8.3.0",
     "husky": "^8.0.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
